--- a/index.html
+++ b/index.html
@@ -1,42 +1,10 @@
 
 
+
 <html>
 <head>
 <title > MAC PDU Decoder </title>
-<style>
-body{
-background-color: #9CAECB;
-}
-.semi-square {
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   border-radius: 5px;
-}
-.styled-select {
-   background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
-   height: 29px;
-   overflow: hidden;
-   width: 240px;
-   color: black;
-}
-.styled-select select {
-   background: transparent;
-   color: black;
-   border: none;
-   font-size: 14px;
-   height: 29px;
-   padding: 5px; /* If you add too much padding here, the options won't show in IE */
-   width: 268px;
-     -webkit-appearance: none;
-	 padding: 2px 10px;
-}
-.styled-select option{
-background: #3b8ec2;
 
-}
-.blue    { background-color: #3b8ec2; }
-.blue select    { color: #fff; }
-</style>
 <script type="text/javascript">
 function macPDUDecoder() {
  decodedContent = '';
@@ -393,17 +361,119 @@ function getMACCEtype(LCID, direction){
  }
 }
 
- </script>
-  <style>
+</script>
+<style>
+body{
+background-color: 747A9E;
+}
+.strip{
+	width:100%;
+	height:39px;
+	font-size:20px;
+	color:white;
+	background-color: #ed3905;
+	background-color: black;
+	
+	
+	
+}
+ul.menu_top {
+	list-style-type: none;
+	float: right;
+	display: block;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	font-size:18px;
+	
+}
+
+ul.menu_top li {
+    font-size:18px;
+	display: inline;
+	font-size: 11px;
+	font-weight: bold;
+	line-height: 35px;
+}
+ul.menu_top li.speed {
+	float:left;
+	width:170px;
+  	background: url(../images/speedTest.jpg);
+	display: block;
+	height: 35px;
+}
+
+ul.menu_top li.divider {
+	display: inline;
+	width: 3px;
+	height: 35px;
+	float: right;
+	background: url(../images/menu_divider.1jpg.jpg) no-repeat center;
+}
+a.menu_top_a:link,a.menu_top_a:visited,a.menu_top_a:hover {
+	color: #159dcc;
+	font-size:15px;
+	text-decoration: none;
+}
+
+a.menu_top_a:hover {
+	color: #c0c0c0;
+	text-decoration: none;
+}
+
+a.menu_top_a:link,a.menu_top_a:visited {
+	display: block;
+	float: right;
+	padding: 0px 8px 0px 8px;
+	margin: 0 14px 0 14px;
+	height: 35px;
+	text-decoration: none;
+	color: #fff;
+}
+
+a.menu_top_a:hover {
+	display: block;
+	float: right;
+	padding: 0px 8px 0px 8px;
+	margin: 0 14px 0 14px;
+	height: 35px;
+	text-decoration: none;
+	color: #199ECD;
+}
+.styled-select {
+   background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+   height: 29px;
+   overflow: hidden;
+   width: 240px;
+   color: black;
+}
+.styled-select select {
+   background: transparent;
+   color: black;
+   border: none;
+   font-size: 14px;
+   height: 29px;
+   padding: 5px; /* If you add too much padding here, the options won't show in IE */
+   width: 268px;
+     -webkit-appearance: none;
+	 padding: 2px 10px;
+}
+.styled-select option{
+background: #3b8ec2;
+
+}
+.blue    { background-color: #3b8ec2; }
+.blue select    { color: #fff; }
+
 input[type=text], select {
-    width: 277%;
-    padding: 8px 20px;
-    margin: 8px 0%;
+    width: 100%;
+    padding: 5px 20px;
+    margin: 0.5% 0%;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-	font: 16px arial
+	font: 16px segoe UI
 }
 
 input[type=submit] {
@@ -415,7 +485,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-	font: 16px arial
+	font: 16px segoe UI
 }
 
 input[type=submit]:hover {
@@ -425,58 +495,127 @@ input[type=submit]:hover {
 #forms {
     border-radius: 5px;
     background-color: #f2f2f2;
-    padding: 15px 10%;
-	font: 17px arial;
-	margin: 0 10%;
+    padding: 15px 8%;
+	font: 17px segoe UI;
+	margin: 0%;
+	width:84%;
 }
-h3{
-padding:0px 10% ;
-font: 20px arial;
+#heading{
+padding:15px 10% ;
+font: 20px segoe UI;
+}
+#main_content{
+	margin: 0 10%;
+	width: 80%;
+	
+}
+#form{
+	
+  
+	width:100%;
+	margin: 0%;
+}
+#result{
+	
+	width:100%;
+	margin: 0%;
+}
+#table{
+	width: 100%;
+    
+    margin: 1% 0;
+
+}
+#label{
+width: 16%;
+float: left;
+padding: 5px 2%;
+margin: 1% 0; 
+
+
+}
+#box{
+width: 80%;
+float: right;
+
+}
+#row{
+width: 100%;
+float: left;
+
 }
 #contentMACPDU{
-background-color: #F2F9E0;
+ background-color: #F2F9E0;
  height: 400px;
  border-radius: 5px;
  overflow: scroll;
  text-align: left;
- width: 75.5%;
- margin:10px 10%;
- padding : 30px ;
- font: 16px arial;
+ width: 94%;
+ margin:10px 0 0 0 ;
+ padding : 3% ;
+ font: 16px segoe UI ;
 }
-table{
-border:1px;
+
+.footer {
+	margin-top:0px;
+	float:left;
+	width:100%;
+	min-height: 20px;
+	background: #171717;
+	clear: both;
+	padding : 5px;
+	text-align: center;
+	font: 10px segoe UI;
+	color: #f8f7dc;
+}
+
+	
+
+
 }
 </style>
  <body>
+<div class="strip">
+<ul class="menu_top">
+<li><a href="#" class="menu_top_a">Long Term Evolution</a></li>
 
+</ul>
 
-<h3><br>MAC PDU DECODER:</h3>
+</div>
 
+<div id="heading">MAC PDU DECODER:</div>
+<div id ="main_content">
+<div id ="form">
 <div id ="forms">
-  <form onsubmit="return false">
-    <table>
-    		<tr>
-    		<td><label >MAC PDU in HEX :</label></td>
-    		<td><input type="text" id="macPDU" value="" placeholder="Mac Pdu ">
-			</td></tr>
-			<tr>
-			<td><label >UL or DL :</label></td>
-			<td><select  id="direction" name="direction">
+<form onsubmit="return false">
+    <div id="table">
+    <div id ="row">
+    <div id ="label">MAC PDU in HEX :</div>
+    <div id ="box">
+    		<input type="text" id="macPDU" value="" placeholder="Mac Pdu ">
+			</div></div>
+	<div id ="row">
+	<div id ="label">UL or DL :</div>
+	  <div id ="box"><select  id="direction" name="direction">
 				    <option>select</option>
 					<option>Uplink</option>
 				    <option>Downlink</option>
 		 		</select>
-			</td>
-			</tr>
-	</table>
+		</div></div>
+	</div>
     <input type="submit" value="Decode" onclick="macPDUDecoder()">
   </form>
 </div>
-
+</div>
+<div id ="result">
 <div id="contentMACPDU">
 </div>
-</form>
+</div>
+</div>
+<div class="footer">
+	<marquee>Copyright @2017 islamahmed@azcomInfosolutions, gurgaon.</marquee>
+</div>
+		
 
  </body>
  </head>
