--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@ function getMACCEtype(LCID, direction){
 <style>
 body{
 background-color: 747A9E;
+padding:0 !important;
+margin: 0 !important;
+overflow: hidden;
 }
 .strip{
 	width:100%;
