--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <html>
 <head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6009521492513732",
+    enable_page_level_ads: true
+  });
+</script>
 <title > MAC PDU Decoder </title>
 
 <script type="text/javascript">
